Remove index.html reference

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -4,7 +4,7 @@ en:
     url:   "/"
   journal:
     title: "journal"
-    url:   "/index.html"
+    url:   "/"
   about:
     title: "about"
     url:   "/about/"
