--- a/_data/translations.yml
+++ b/_data/translations.yml
@@ -1,8 +1,8 @@
 en:
   created: "Published on the"
+  original: "initially published the"
   author: "by"
-  description: "Personal website, made with real pieces of code: articles about Jekyll, Raspberry Pi, R..."
 fr:
   created: "Publié le"
+  original: "publié initialement le"
   author: "par"
-  description: "Site personnel, avec des vrais bouts de code dedans : articles sur Jekyll, Raspberry Pi, R..."
