--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 permalink: /:title/
-base: https://www.sylvaindurand.org
+base: http://ontore.github.io/sylvaindurand.org
 
 kramdown:
   input: GFM
